--- a/test/projects.html
+++ b/test/projects.html
@@ -14,8 +14,7 @@
     <header>
         <nav class="navbar">
             <div class="logo">
-                <img src="assets/Logo/Transparent/Horizontal/Horizontal 1200px.png" alt="image" href="index.html">
-                <!-- <a href="index.html">BEVERINT</a> -->
+                <a href="index.html"><img src="assets/Logo/Transparent/Horizontal/Horizontal 1200px.png" alt="logo"></a>
             </div>
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
