--- a/test/index.html
+++ b/test/index.html
@@ -15,7 +15,7 @@
     <header>
         <nav class="navbar">
             <div class="logo">
-                <img src="assets/Logo/Transparent/Horizontal/Horizontal 1200px.png" alt="image" href="index.html">
+                <a href="index.html"><img src="assets/Logo/Transparent/Horizontal/Horizontal 1200px.png" alt="logo"></a>
                 <!-- <a href="index.html">BEVERINT</a> -->
             </div>
             <ul class="nav-links">
