--- a/test/index.html
+++ b/test/index.html
@@ -57,7 +57,8 @@
             <h2>WE COMMITTED TO SAFETY AND BEST QUALITY</h2>
             <!-- <p>Your trusted construction partner</p> -->
             <!-- <a href="about.html" class="btn1">Learn More</a> -->
-            <a href="https://wa.me/628123456789?text=PT Beverint Surya Sejati" class="btn-contact" type="button">Contact
+            <a href="https://wa.me/628123456789?text=Halo PT Beverint Surya Sejati" class="btn-contact"
+                type="button">Contact
                 Us</a>
         </div>
     </section>
@@ -149,9 +150,9 @@
                 <img src="assets/Logo/Transparent/Vertical/Vertical 1200px.png" alt="logo">
                 <!-- <h3>PT Beverint Surya Sejati</h3> -->
                 <!-- <img src="" alt="icon"> -->
-                <p>The CEO Building (Cilandak Executive Office) Lantai 15, <br>Jl TB Simatupang no. 18C,
+                <p>The CEO Building (Cilandak Executive Office) Lantai 15, Jl TB Simatupang no. 18C,
                     Cilandak Barat,
-                    Cilandak,<br>
+                    Cilandak,
                     Jakarta Selatan, Jakarta 12430</p>
                 <p>
                     (021) 88888888
