--- a/test/index.html
+++ b/test/index.html
@@ -19,7 +19,7 @@
                 <!-- <a href="index.html">BEVERINT</a> -->
             </div>
             <ul class="nav-links">
-                <li><a href="index.html">Homex</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li class="dropdown">
                     <a href="about.html" class="dropbtn">Tentang Kami</a>
                     <!-- <ul class="dropdown-content">
